# mysoundlib

./: CMakeLists.txt  DspWindows.cpp  DspWindows.h  FftConvolutor.cpp  FftConvolutor.h  FirDesign.cpp  FirDesign.h  Group.cpp  Group.h  LICENSE  Parallel.cpp  Parallel.h  Sequence.cpp  Sequence.h  SimpleConvolutor.cpp  SimpleConvolutor.h  SoundFile.cpp  SoundFile.h  SoundFileReader.cpp  SoundFileReader.h  SoundFileWriter.cpp  SoundFileWriter.h  SoundProcessor.cpp  SoundProcessor.h  main.cpp
